--- a/gemma-server/Dockerfile
+++ b/gemma-server/Dockerfile
@@ -1,24 +1,10 @@
-FROM ubuntu:22.04
+FROM ghcr.io/ggerganov/llama.cpp:latest
 
-# System dependencies
-RUN apt-get update && apt-get install -y \
-    git build-essential cmake wget curl libopenblas-dev libomp-dev \
-    && apt-get clean
+# Copy model into container
+COPY ./models /models
 
-# Clone llama.cpp
-RUN git clone https://github.com/ggerganov/llama.cpp.git /app
-WORKDIR /app
-
-# Build the server
-RUN cmake -DLLAMA_BUILD_SERVER=ON -DLLAMA_BUILD_EXAMPLES=ON -DCMAKE_BUILD_TYPE=Release -B build && \
-    cmake --build build --config Release
-
-# Copy your model into the image
-COPY models /app/models
-
-# Expose port 8080
+# Expose the default server port
 EXPOSE 8080
 
-# Run llama-server with your model
-CMD ["/app/build/bin/llama-server", "-m", "/app/models/gemma-3n-e4b-it.Q4_K_M.gguf", "--port", "8080"]
-
+# Run the server with desired model and settings
+CMD ["/app/server", "-m", "/models/gemma-3n-e4b-it.Q4_K_M.gguf", "--port", "8080", "--ctx-size", "2048"]
